# pdfsink-rs

./: .gitignore  Cargo.toml  README.md
bench/: bench_cli.py  bench_pdfplumber.py  bench_pdfsink.rs  compare.py
examples/: quickstart.rs
pdf-extraction/: SKILL.md
src/: clustering.rs  container_api.rs  display.rs  error.rs  geometry.rs  layout.rs  lib.rs  ops.rs  parse.rs  table.rs  text.rs  types.rs
tests/: edge_cases.rs  golden.rs  parity_surface.rs
tests/goldens/: goldens.json
tools/: generate_fixtures.py  generate_goldens.py
validation/: REPORT.md  UPSTREAM_REFERENCES.md  report.json
