[package]
name = "pdfsink-rs"
version = "0.2.2"
edition = "2021"
description = "Native pure-Rust PDF extraction crate inspired by pdfplumber — ~10-50x faster text, word, table, and object extraction from PDFs"
license = "MIT"
repository = "https://github.com/clark-labs-inc/pdfsink-rs"
homepage = "https://github.com/clark-labs-inc/pdfsink-rs"
readme = "README.md"
keywords = ["pdf", "extraction", "pdfplumber", "table", "text"]
categories = ["parser-implementations", "text-processing"]

[lib]
name = "pdfsink_rs"
path = "src/lib.rs"

[[bin]]
name = "pdfsink-rs"
path = "src/bin/pdfsink-rs.rs"

[dependencies]
csv = "1"
euclid = "0.20.5"
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = { version = "0.25", default-features = false }
lopdf = "0.38"
ordered-float = "4"
pdf-extract = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[[example]]
name = "bench_pdfsink"
path = "bench/bench_pdfsink.rs"

[dev-dependencies]
serde_json = "1"
