[package]
name = "pdfsink-rs"
version = "0.2.5"
edition = "2021"
authors = ["Clark Labs Inc. <https://github.com/clark-labs-inc>"]
description = "Fast pure-Rust PDF extraction library and CLI — ~10-50x faster than pdfplumber for text, word, table, layout, image, and metadata extraction from PDFs. By Clark Labs Inc."
license = "MIT"
repository = "https://github.com/clark-labs-inc/pdfsink-rs"
homepage = "https://github.com/clark-labs-inc/pdfsink-rs"
documentation = "https://docs.rs/pdfsink-rs"
readme = "README.md"
keywords = ["pdf", "pdfplumber", "extraction", "table", "parser"]
categories = ["parser-implementations", "text-processing", "command-line-utilities"]

[lib]
name = "pdfsink_rs"
path = "src/lib.rs"

[[bin]]
name = "pdfsink-rs"
path = "src/bin/pdfsink-rs.rs"

[dependencies]
csv = "1"
euclid = "0.20.5"
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc = { version = "0.25", default-features = false }
lopdf = "0.38"
ordered-float = "4"
pdf-extract = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[[example]]
name = "bench_pdfsink"
path = "bench/bench_pdfsink.rs"

[dev-dependencies]
serde_json = "1"
